feat(html): add profile photo on home page

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -6,7 +6,7 @@
 <h5>Graphic Designer</h5>
 
 <div class="about">
-    <img class="profile-pic" src="http://placehold.it/200x200" alt="Profile Picture">
+    <img class="profile-pic" src="{{site.baseurl}}/images/profile-photo.jpg" alt="Profile Picture">
     <h2 id="breathing-space">About</h2>
     <p id="columns">Thank you for stopping by.
         
