feat(all): add svg logo to website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
         <header class="main-header">
             <h1 class="main-logo">
                 <a href="{{site.baseurl}}/">
-                    <img class="logo-img" src="http://placehold.it/180x100" alt="Sebastian Nadeau">
+                    <img class="logo-img" src="{{site.baseurl}}/images/logotype.svg" alt="Sebastian Nadeau">
                 </a>
             </h1>
             <nav>
