--- a/css/grids.css
+++ b/css/grids.css
@@ -64,6 +64,12 @@
         display: none;
     }
     
+    .unit-l-1-2 {
+        width: 50%;
+        visibility: visible;
+        display: block;
+    }
+    
     .unit-l-1-3 {
         width: 33.3333%;
         visibility: visible;
