feat(all): add go with the flow project to portfolio

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -1,23 +1,23 @@
 <div class="grid">
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}../typography/bridgehead/">
-            <img src="{{site.baseurl}}/images/typography/bridgehead-cover.jpg" alt="Project 1">
+            <img src="{{site.baseurl}}/images/typography/bridgehead-cover.jpg" alt="Bridgehead">
             <figcaption>
                 <h5>Bridgehead</h5>
             </figcaption>
         </a>
     </figure>
     
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 2">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+        <a href="{{site.baseurl}}../typography/go-with-the-flow/">
+            <img src="{{site.baseurl}}/images/typography/go-with-the-flow-cover.jpg" alt="Go with the Flow">
             <figcaption>
-                <h5>Project 2</h5>
+                <h5>Go with the Flow</h5>
             </figcaption>
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 3">
             <figcaption>
@@ -26,7 +26,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-hidden">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 4">
             <figcaption>
