feat(all): add hamburger graphic to nav toggle menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
             <nav>
                 <input type="checkbox" class="nav-check" id="nav-check">
                 <label class="nav-label" for="nav-check">
-                    <img class="nav-open" src="http://placehold.it/80x80" alt="Open Navigation">
-                    <img class="nav-close" src="http://placehold.it/70x80" alt="Close Navigation">
+                    <img class="nav-open" src="{{site.baseurl}}/images/hamburger-open.svg" alt="Open Navigation">
+                    <img class="nav-close" src="{{site.baseurl}}/images/hamburger-close.svg" alt="Close Navigation">
                 </label>
                 <ul class="nav">
                     <li><a href="{{site.baseurl}}/all"><p class="{% if page.url contains 'all' %}current{% endif %}">All</p></a></li>
