--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -27,10 +27,10 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 4">
+        <a href="{{site.baseurl}}../typography/obsessed-with-speed/">
+            <img src="{{site.baseurl}}/images/typography/obsessed-with-speed-cover.jpg" alt="Obsessed with Speed">
             <figcaption>
-                <h5>Project 4</h5>
+                <h5>Obsessed with Speed</h5>
             </figcaption>
         </a>
     </figure>
