feat(all): add demo reel to portfolio website

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
             <img class="social-media-icons" src="http://placehold.it/100x100" alt="Linked In">
             <img class="social-media-icons" src="http://placehold.it/100x100" alt="Vimeo">
         </div>
-        <p class="copyright">© Copyright 2015 Sebastian Nadeau</p>
+        <p class="copyright">© 2015 Sebastian Nadeau</p>
         <a class="terms" href="#">
             <p>Terms and Privacy</p>
         </a>
