--- a/_includes/interactive.html
+++ b/_includes/interactive.html
@@ -1,5 +1,5 @@
 <div class="grid">
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 1">
             <figcaption>
@@ -8,7 +8,7 @@
         </a>
     </figure>
     
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 2">
             <figcaption>
@@ -17,7 +17,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 3">
             <figcaption>
@@ -26,7 +26,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-hidden">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 4">
             <figcaption>
