--- a/_includes/motion.html
+++ b/_includes/motion.html
@@ -1,14 +1,14 @@
 <div class="grid">
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 1">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
+        <a href="{{site.baseurl}}../motion/demo-reel/">
+            <img src="{{site.baseurl}}/images/motion/demo-reel-cover.jpg" alt="Demo Reel">
             <figcaption>
-                <h5>Project 1</h5>
+                <h5>Demo Reel</h5>
             </figcaption>
         </a>
     </figure>
     
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 2">
             <figcaption>
@@ -17,7 +17,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-1-3">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 3">
             <figcaption>
@@ -26,7 +26,7 @@
         </a>
     </figure>
 
-    <figure class="unit unit-s-1 unit-m-1-2 unit-l-hidden">
+    <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="#">
             <img src="http://placehold.it/300x200" alt="Project 4">
             <figcaption>
