--- a/css/main.css
+++ b/css/main.css
@@ -287,7 +287,7 @@ figcaption > h5 {
 }
 
 .motion {
-    background-image:url(http://placehold.it/500x210);
+    background-image:url("../images/banner-motion.jpg");
 }
 
 #tab {
