feat(all): add blue hen farm project to portfolio website

--- a/_includes/motion.html
+++ b/_includes/motion.html
@@ -9,10 +9,10 @@
     </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 2">
+        <a href="{{site.baseurl}}../motion/blue-hen-farm/">
+            <img src="{{site.baseurl}}/images/motion/blue-hen-farm-cover.jpg" alt="Blue Hen Farm">
             <figcaption>
-                <h5>Project 2</h5>
+                <h5>Blue Hen Farm</h5>
             </figcaption>
         </a>
     </figure>
