feat(all): add building a portfolio project to website

--- a/_includes/motion.html
+++ b/_includes/motion.html
@@ -18,10 +18,10 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 3">
+        <a href="{{site.baseurl}}../motion/building-a-portfolio/">
+            <img src="{{site.baseurl}}/images/motion/building-a-portfolio-cover.jpg" alt="Building a Portfolio">
             <figcaption>
-                <h5>Project 3</h5>
+                <h5>Building a Portfolio</h5>
             </figcaption>
         </a>
     </figure>
