--- a/_includes/motion.html
+++ b/_includes/motion.html
@@ -27,10 +27,10 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 4">
+        <a href="{{site.baseurl}}../motion/tennis-infographic/">
+            <img src="{{site.baseurl}}/images/motion/tennis-infographic-cover.jpg" alt="Tennis Infographic">
             <figcaption>
-                <h5>Project 4</h5>
+                <h5>Tennis Infographic</h5>
             </figcaption>
         </a>
     </figure>
