--- a/_includes/interactive.html
+++ b/_includes/interactive.html
@@ -1,9 +1,9 @@
 <div class="grid">
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 1">
+        <a href="{{site.baseurl}}../interactive/ascent-app/">
+            <img src="{{site.baseurl}}/images/interactive/ascent-app-cover.jpg" alt="Ascent App">
             <figcaption>
-                <h5>Project 1</h5>
+                <h5>Ascent App</h5>
             </figcaption>
         </a>
     </figure>
