feat(all): add good to talk project to portfolio

--- a/_includes/interactive.html
+++ b/_includes/interactive.html
@@ -9,10 +9,10 @@
     </figure>
     
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 2">
+        <a href="{{site.baseurl}}../interactive/good-to-talk-app/">
+            <img src="{{site.baseurl}}/images/interactive/good-to-talk-cover.jpg" alt="Good to Talk">
             <figcaption>
-                <h5>Project 2</h5>
+                <h5>Good to Talk</h5>
             </figcaption>
         </a>
     </figure>
