--- a/_includes/interactive.html
+++ b/_includes/interactive.html
@@ -18,10 +18,10 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 3">
+        <a href="{{site.baseurl}}../interactive/palisar/">
+            <img src="{{site.baseurl}}/images/interactive/palisar-cover.jpg" alt="Palisar">
             <figcaption>
-                <h5>Project 3</h5>
+                <h5>Palisar</h5>
             </figcaption>
         </a>
     </figure>
