--- a/_includes/interactive.html
+++ b/_includes/interactive.html
@@ -27,10 +27,10 @@
     </figure>
 
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
-        <a href="#">
-            <img src="http://placehold.it/300x200" alt="Project 4">
+        <a href="{{site.baseurl}}../interactive/galactic-adventures/">
+            <img src="{{site.baseurl}}/images/interactive/galactic-adventures-cover.jpg" alt="Galactic Adventures">
             <figcaption>
-                <h5>Project 4</h5>
+                <h5>Galactic Adventures</h5>
             </figcaption>
         </a>
     </figure>
