--- a/css/main.css
+++ b/css/main.css
@@ -88,12 +88,12 @@ a {
 }
 
 li > a {
-    margin: 0.75em;
+    margin: 0.75em 0;
 }
 
 
 li > a p {
-    margin: 0.35em;
+    margin: 0.35em 0;
     padding: 0;
 }
 
