feat(all): add space between sections on all page

--- a/css/main.css
+++ b/css/main.css
@@ -276,6 +276,14 @@ figcaption > h5 {
   BANNERS
 --------------------------- */
 
+#all-border-top {
+    padding-bottom: 3em;
+}
+
+#all-border {
+    padding-bottom: 3em;
+}
+
 .banner {
     width: 100%;
     height: 300px;
