--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
     <title>Sebastian Nadeau | Graphic Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/js/carousel/slick.css"/>
+    <link rel="stylesheet" href="{{site.baseurl}}/js/carousel/slick-theme.css"/>
     <link rel="stylesheet" href="{{site.baseurl}}/js/lightbox/magnific-popup.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/typography.css">
     <link rel="stylesheet" href="{{site.baseurl}}/css/grids.css">
@@ -59,7 +61,9 @@
         </a>
     </footer>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+    <script src="/js/carousel/slick.min.js"></script>
     <script src="/js/lightbox/jquery.magnific-popup.min.js"></script>
+    <script src="/js/carousel.js"></script>
     <script src="/js/lightbox.js"></script>
 </body>
 </html>
