--- a/css/typography.css
+++ b/css/typography.css
@@ -141,6 +141,10 @@ h6, .kilo {
     margin-bottom: 3rem;
 }
 
+.push-bottom-tripple {
+    margin-bottom: 4.5rem;
+}
+
 .pad-top {
   padding-top: 1.5rem;
 }
