--- a/css/main.css
+++ b/css/main.css
@@ -109,7 +109,7 @@ nav {
     right: 0;
     top: 100%;
     width: 100%;
-    background-color: #797e83;
+    background-color: #003436;
 }
 
 .nav a {
@@ -365,7 +365,7 @@ footer {
     margin: 0 auto;
     text-align: center;
     padding: 1.5em;
-    background-color: gray;
+    background-color: #003436;
 }
 
 footer > div {
@@ -437,7 +437,7 @@ footer > div {
 	}
 	.nav a {
 		border-bottom-color: transparent;
-        color: #797e83;
+        color: #025E63;
 	}
     
     nav a: hover {
