--- a/css/typography.css
+++ b/css/typography.css
@@ -41,11 +41,11 @@ body {
 
 /* --------------------------
   BRAND HEADLINES
---------------------------- 
+--------------------------- */
 
-h1, h2, h3, h4, h5, h6,
+h1, h2, h3, h4, h6,
 .brand {
-    color: #52bab3;
+    color: #025E63;
 }
 
 .brand-family {
@@ -53,8 +53,8 @@ h1, h2, h3, h4, h5, h6,
 }
 
 .brand-color {
-    color: #52bab3;
-} */
+    color: #025E63;
+}
 
 
 
