--- a/css/main.css
+++ b/css/main.css
@@ -268,6 +268,17 @@ figcaption > h5 {
     height: 100%;
 }
 
+/* --------------------------
+  CAROUSEL BANNERS
+--------------------------- */
+
+.banner-carousel {
+    width: 100%;
+    height: 480px; /* 480px is 30em which fits to the baseline grid */
+    background-position: center;
+    background-size: cover;
+    background-repeat:no-repeat;
+}
 
 /* --------------------------
   BANNERS
