--- a/css/typography.css
+++ b/css/typography.css
@@ -19,14 +19,23 @@ html {
     }
 }
 
-h2, h3, h5, h6, ol, dl, dd,
+h3, h5, h6, ol, dl, dd,
 blockquote, details, hr,
 fieldset, pre, table {
     margin: 0 0 1.5rem 0;
 }
 
-div > h2, h2 + p {
-   margin: 0.75rem; 
+h2 {
+    -webkit-column-span: all; /* Chrome, Safari, Opera */
+    column-span: all;
+}
+
+#columns p, #columns h2 {
+    margin: 0.75rem; 
+}
+
+#columns p {
+    margin: 0 0.75rem 1.5em;
 }
 
 body {
