feat(all): add social media icon graphics

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,9 +51,15 @@
     </div>  
     <footer>
         <div>
-            <img class="social-media-icons" src="http://placehold.it/100x100" alt="Behance">
-            <img class="social-media-icons" src="http://placehold.it/100x100" alt="Linked In">
-            <img class="social-media-icons" src="http://placehold.it/100x100" alt="Vimeo">
+            <a href="https://www.behance.net/SebastianNadeau" target="_blank">
+                <img class="social-media-icons" src="{{site.baseurl}}/images/behance-icon.svg" alt="Behance">
+            </a>
+            <a href="https://ca.linkedin.com/in/sebastian-nadeau-943852104" target="_blank">
+                <img class="social-media-icons" src="{{site.baseurl}}/images/linkedin-icon.svg" alt="Linked In">
+            </a>
+            <a href="https://vimeo.com/sebastiannadeau" target="_blank">
+                <img class="social-media-icons" src="{{site.baseurl}}/images/vimeo-icon.svg" alt="Vimeo">
+            </a>
         </div>
         <p class="copyright">© 2015 Sebastian Nadeau</p>
         <a class="terms" href="#">
