style(html): adjust spacing of footer and about section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,7 +50,7 @@
         
     </div>  
     <footer>
-        <div>
+        <div class="pad-top-half">
             <a href="https://www.behance.net/SebastianNadeau" target="_blank">
                 <img class="social-media-icons" src="{{site.baseurl}}/images/behance-icon.svg" alt="Behance">
             </a>
@@ -61,10 +61,12 @@
                 <img class="social-media-icons" src="{{site.baseurl}}/images/vimeo-icon.svg" alt="Vimeo">
             </a>
         </div>
-        <p class="copyright">© 2015 Sebastian Nadeau</p>
-        <a class="terms" href="#">
-            <p>Terms and Privacy</p>
-        </a>
+        <div class="pad-bottom-half">
+            <p class="copyright">© 2015 Sebastian Nadeau</p>
+            <a class="terms" href="#">
+                <p>Terms and Privacy</p>
+            </a>
+        </div>
     </footer>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="/js/carousel/slick.min.js"></script>
