style(css): adjust the margin on paragraphs

--- a/css/typography.css
+++ b/css/typography.css
@@ -35,7 +35,13 @@ h2 {
 }
 
 p {
-    margin: 0 0.75rem 1.5em;
+    margin-left: 0.75rem;
+    margin-right: 0.75rem;
+}
+
+h2 ~ p {
+    margin-top: 0;
+    margin-bottom: 1rem;
 }
 
 body {
