--- a/css/typography.css
+++ b/css/typography.css
@@ -30,7 +30,7 @@ h2 {
     column-span: all;
 }
 
-.about > h2, .push-top-double > h2 {
+.about-section > h2, .push-top-double > h2 {
     margin: 0 0.75rem 0.75rem;
 }
 
@@ -39,7 +39,7 @@ p {
     margin-right: 0.75rem;
 }
 
-h2 ~ p {
+#columns p {
     margin-top: 0;
     margin-bottom: 1rem;
 }
