--- a/css/typography.css
+++ b/css/typography.css
@@ -42,12 +42,14 @@ p {
 #columns > p {
     margin-top: 0;
     margin-bottom: 0;
-    text-indent: 3em;
+    text-indent: 1.5em;
 }
+
+/*
 
 #columns > p:first-child {
     text-indent: 0em;
-}
+} */
 
 body {
     color: #797e83;
