--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Sebastian Nadeau | Graphic Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done.">
     <link rel="shortcut icon" href="{{site.baseurl}}/images/favicon.ico">
     <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
     <link rel="stylesheet" href="{{site.baseurl}}/js/carousel/slick.css"/>
@@ -33,12 +34,12 @@
                     <img class="nav-close" src="{{site.baseurl}}/images/hamburger-close.svg" alt="Close Navigation">
                 </label>
                 <ul class="nav">
-                    <li><a href="{{site.baseurl}}/all"><p class="{% if page.url contains 'all' %}current{% endif %}">All</p></a></li>
-                    <li><a href="{{site.baseurl}}/typography/"><p class="{% if page.url contains 'typography' %}current{% endif %}">Typography</p></a></li>
-                    <li><a href="{{site.baseurl}}/illustration/"><p class="{% if page.url contains 'illustration' %}current{% endif %}">Illustration</p></a></li>
-                    <li><a href="{{site.baseurl}}/interactive/"><p class="{% if page.url contains 'interactive' %}current{% endif %}">Interactive</p></a></li>
-                    <li><a href="{{site.baseurl}}/motion"><p class="{% if page.url contains 'motion' %}current{% endif %}">Motion</p></a></li>
-                    <li><a href="{{site.baseurl}}/contact"><p class="{% if page.url contains 'contact' %}current{% endif %}">Contact</p></a></li>
+                    <li><a href="{{site.baseurl}}/all"><h6 class="{% if page.url contains 'all' %}current{% endif %}">All</h6></a></li>
+                    <li><a href="{{site.baseurl}}/typography/"><h6 class="{% if page.url contains 'typography' %}current{% endif %}">Typography</h6></a></li>
+                    <li><a href="{{site.baseurl}}/illustration/"><h6 class="{% if page.url contains 'illustration' %}current{% endif %}">Illustration</h6></a></li>
+                    <li><a href="{{site.baseurl}}/interactive/"><h6 class="{% if page.url contains 'interactive' %}current{% endif %}">Interactive</h6></a></li>
+                    <li><a href="{{site.baseurl}}/motion"><h6 class="{% if page.url contains 'motion' %}current{% endif %}">Motion</h6></a></li>
+                    <li><a href="{{site.baseurl}}/contact"><h6 class="{% if page.url contains 'contact' %}current{% endif %}">Contact</h6></a></li>
                 </ul>
             </nav>
         </header>
@@ -64,9 +65,6 @@
         </div>
         <div class="pad-bottom-half">
             <p class="copyright">© 2015 Sebastian Nadeau</p>
-            <a class="terms" href="#">
-                <p>Terms and Privacy</p>
-            </a>
         </div>
     </footer>
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
