refactor(html): adjust meta description of the website.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Sebastian Nadeau | Graphic Designer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done.">
+    <meta name="description" content="Sebastian Nadeau - My design portfolio showcasing the graphic design work I have done in Ottawa.">
     <link rel="shortcut icon" href="{{site.baseurl}}/images/favicon.ico">
     <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
     <link rel="stylesheet" href="{{site.baseurl}}/js/carousel/slick.css"/>
