--- a/css/typography.css
+++ b/css/typography.css
@@ -19,7 +19,7 @@ html {
     }
 }
 
-h3, h5, h6, ol, dl, dd,
+h3, h6, ol, dl, dd,
 blockquote, details, hr,
 fieldset, pre, table {
     margin: 0 0 1.5rem 0;
@@ -39,12 +39,6 @@ h1 {
 p {
     margin-left: 0.75rem;
     margin-right: 0.75rem;
-}
-
-#columns > p {
-    margin-top: 0;
-    margin-bottom: 0;
-    text-indent: 1.5em;
 }
 
 /*
@@ -76,6 +70,11 @@ h1, h3, h4,
     color: #025E63;
     margin-left: 0.75rem;
     margin-right: 0.75rem;
+    margin-bottom: 0.355rem;
+}
+
+#h5 {
+    font-weight: normal;
 }
 
 .brand-family {
