style(css): adjust spacing on h5 Graphic Designer header

--- a/css/main.css
+++ b/css/main.css
@@ -189,6 +189,10 @@ a + p {
     text-align: center;
 }
 
+#name + h5 {
+    margin: 0.355rem;
+}
+
 h3 + h5 {
     text-align: center;
     font-weight: normal;
