--- a/css/main.css
+++ b/css/main.css
@@ -93,7 +93,7 @@ li > a {
 
 
 li > a h6 {
-    margin: 0.35em 0;
+    margin: 0.75em 0;
     padding: 0;
 }
 
@@ -118,6 +118,7 @@ nav {
     font-size: 1.125em;
     font-weight: 300;
     text-align: center;
+    margin: 0;
     padding: 0;
     border-bottom: 1px solid #ebecec;
 }
