refactor(html): change site name

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <meta property="og:title" content="{% if page.title %}{{page.title}} · {% endif %}Sebastian Nadeau{% if page.titleAfter %} | {{page.titleAfter}}{% endif %}">
     <meta property="og:url" content="{{ page.url | prepend: site.baseurl | prepend: site.url }}">
     <meta property="og:image" content="{% if page.featured_image %}{{ page.featured_image | prepend: site.baseurl | prepend: site.url }}{% else %}{{ site.icon | prepend: site.baseurl | prepend: site.url }}{% endif %}">
-    <meta property="og:site_name" content="Sebastian Nadeau | Graphic Designer">
+    <meta property="og:site_name" content="Sebastian Nadeau">
     <meta property="og:description" content="{{page.meta}}">
     
     <link rel="shortcut icon" href="{{site.baseurl}}/images/favicon.ico">
