--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,8 @@
     <meta property="og:title" content="{% if page.title %}{{page.title}} · {% endif %}Sebastian Nadeau{% if page.titleAfter %} | {{page.titleAfter}}{% endif %}">
     <meta property="og:description" content="{{page.meta}}">
     <meta property="og:image" content="{% if page.featured_image %}{{ page.featured_image | prepend: site.baseurl | prepend: site.url }}{% else %}{{ site.icon | prepend: site.baseurl | prepend: site.url }}{% endif %}">
-    <meta property="fb:app_id" content="[FB_APP_ID]" />
+    <meta property="fb:admins" content="{{ site.fb_admins }}">
+    <meta property="fb:app_id" content="{{ site.fb_appid }}">
     
     <link rel="shortcut icon" href="{{site.baseurl}}/images/favicon.ico">
     <link rel="stylesheet" href="{{site.baseurl}}/css/normalize.css">
