style(css): centered and created a space around the lightbox button

--- a/css/main.css
+++ b/css/main.css
@@ -430,12 +430,11 @@ section figure:hover figcaption {
 
 div + button {
     display: block;
-    width: 100%;
-    margin: 0 auto;
+    width: 50%;
+    margin: 1.5rem auto;
     background-color: #52bab3;
     background-image: linear-gradient(to bottom, #52bab3, #025E63);
-    border-top-left-radius: 6px;
-    border-top-right-radius: 6px;
+    border-radius: 6px;
     box-shadow: 1px 1px 4px rgba(0,0,0,0.5);
     border: 0;
     color: #fff;
@@ -603,6 +602,10 @@ footer > div {
         max-width: 95%;
     }
     
+    div + button {
+        width: 45%;   
+    }
+    
     #breathing-space {
         display: block;   
     }
@@ -647,6 +650,10 @@ footer > div {
     
     .about-section, .push-top-double {
         max-width: 82%;   
+    }
+    
+    div + button {
+        width: 40%;   
     }
     
     .previews-home {
