refactor(html): renamed website preview images

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
         <header class="main-header">
             <h1 class="main-logo">
                 <a href="{{site.baseurl}}/">
-                    <img class="logo-img" src="{{site.baseurl}}/images/logotype.svg" alt="Sebastian Nadeau">
+                    <img class="logo-img" src="{{site.baseurl}}/images/logotype-2.svg" alt="Sebastian Nadeau">
                 </a>
             </h1>
             <nav>
