--- a/_includes/interactive.html
+++ b/_includes/interactive.html
@@ -1,4 +1,4 @@
-<div class="grid">
+<div id="preview-wrapper" class="grid">
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}../interactive/ascent-app/">
             <img src="{{site.baseurl}}/images/interactive/ascent-app-cover.jpg" alt="Ascent App">
