refactor(all): change preview wrapper id to a class

--- a/_includes/typography.html
+++ b/_includes/typography.html
@@ -1,4 +1,4 @@
-<div id="preview-wrapper" class="grid">
+<div class="grid preview-wrapper">
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}../typography/bridgehead/">
             <img src="{{site.baseurl}}/images/typography/bridgehead-cover.jpg" alt="Bridgehead">
