--- a/_includes/illustration.html
+++ b/_includes/illustration.html
@@ -1,4 +1,4 @@
-<div id="preview-wrapper" class="grid">
+<div class="grid preview-wrapper">
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}../illustration/tennis-serve/">
             <img src="{{site.baseurl}}/images/illustration/the-tennis-serve-cover.jpg" alt="The tennis serve">
