--- a/_includes/motion.html
+++ b/_includes/motion.html
@@ -1,4 +1,4 @@
-<div id="preview-wrapper" class="grid">
+<div class="grid preview-wrapper">
     <figure class="unit unit-s-1 unit-m-1-2 unit-h-1-4">
         <a href="{{site.baseurl}}../motion/demo-reel/">
             <img src="{{site.baseurl}}/images/motion/demo-reel-cover.jpg" alt="Demo Reel">
