--- a/css/main.css
+++ b/css/main.css
@@ -588,7 +588,7 @@ footer > div {
         max-width: 100%;   
     }
     
-    #preview-wrapper {
+    .preview-wrapper {
         max-width: 100%;
         margin: 0 auto;
     }
@@ -614,7 +614,7 @@ footer > div {
         max-width: 100%;   
     }
     
-    #preview-wrapper {
+    .preview-wrapper {
         max-width: 85%;
         margin: 0 auto;
     }
@@ -672,7 +672,7 @@ footer > div {
         max-width: 90%;   
     }
     
-    #preview-wrapper {
+    .preview-wrapper {
         max-width: 100%;
         margin: 0 auto;
     }
